--- a/Moretoexpress/PostRequestDemo/package.json
+++ b/Moretoexpress/PostRequestDemo/package.json
@@ -9,6 +9,7 @@
   "author": "Mehul Chaturvedi",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "ejs": "^3.0.1",
     "express": "^4.17.1"
   }
